--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -47,6 +47,23 @@
         "typeinfo": "cpp",
         "unordered_set": "cpp",
         "climits": "cpp",
-        "list": "cpp"
+        "list": "cpp",
+        "__bit_reference": "cpp",
+        "__bits": "cpp",
+        "__config": "cpp",
+        "__debug": "cpp",
+        "__hash_table": "cpp",
+        "__locale": "cpp",
+        "__node_handle": "cpp",
+        "__split_buffer": "cpp",
+        "__tuple": "cpp",
+        "bitset": "cpp",
+        "chrono": "cpp",
+        "compare": "cpp",
+        "iomanip": "cpp",
+        "ios": "cpp",
+        "locale": "cpp",
+        "mutex": "cpp",
+        "stack": "cpp"
     }
 }
